--- a/scss/shortcodes.scss
+++ b/scss/shortcodes.scss
@@ -20,3 +20,9 @@ figure.ccb {
         }
     }
 }
+
+@import "chapter";
+@import "download";
+@import "mixins";
+@import "parallax";
+@import "pullquote";
