--- a/scss/_chapter.scss
+++ b/scss/_chapter.scss
@@ -8,8 +8,7 @@
             margin-bottom: 2rem;
             content: "";
             display: block;
-            border-top: 2px solid #eaeaea;
-            @extend %full-bleed-in-grid;
+            border-top: 2px solid $light-gray;
         }
     }
 }
