--- a/scss/_parallax.scss
+++ b/scss/_parallax.scss
@@ -14,8 +14,8 @@
             padding: 1rem;
         }
         h2 {
-            color: #fff;
-            text-shadow: 0px 1px 1px #000;
+            color: $white;
+            text-shadow: 0px 1px 1px $black;
         }
     }
 }
