--- a/scss/_pullquote.scss
+++ b/scss/_pullquote.scss
@@ -7,7 +7,7 @@
     }
     .source {
         font-size: 0.8rem;
-        color: #eaeaea;
+        color: $light-gray;
         &:before {
             content: "-";
             display: inline-block;
