--- a/scss/_chapter.scss
+++ b/scss/_chapter.scss
@@ -3,7 +3,7 @@
         margin-bottom: 2rem;
     }
     &:not(:first-of-type) {
-        .chapter-title:before {
+        &:before {
             margin-top: 2rem;
             margin-bottom: 2rem;
             content: "";
